--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,26 +1,189 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upload plików</title>
+  <link rel="icon" href="/favicon.png">
+  <meta name="robots" content="noindex, nofollow">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 10px;
+      margin: 0;
+    }
+
+    .form-wrapper {
+      width: 100%;
+      max-width: 600px;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
+
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 20px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+    }
+
+    h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
+
+    label {
+      margin-top: 15px;
+      display: block;
+      font-weight: 600;
+      font-size: 14px;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      box-sizing: border-box;
+      background-color: #fff;
+      color: #000;
+    }
+
+    input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
+    input[type="tel"] { ime-mode: disabled; }
+
+    select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+    select:not(:disabled) { background-color: #fff; color: #000; }
+
+    select { height: 42px; }
+
+    textarea { min-height: 80px; }
+
+    button[type="submit"] {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button[type="submit"]:hover { background: #45a049; }
+
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+    #close-btn:hover { color: #000; }
+
+    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+    .error { background: #f44336; color: #fff; }
+    #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+
+    .rodo-label {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      margin-top: 15px;
+      font-weight: normal;
+      font-size: 14px;
+      gap: 10px;
+    }
+    .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
+  </style>
 </head>
+
 <body>
-
+<div class="form-wrapper">
 <form id="register-form">
-  <label>Email</label><br>
-  <input id="email" type="email" readonly><br><br>
 
-  <label>Pliki</label><br>
-  <input type="file" id="plik" multiple><br><br>
+  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
 
-  <button type="submit">Zapisz</button>
+  <h2 id="form-title">Rejestracja</h2>
+
+  <label>Imię</label>
+  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
+
+  <label>Nazwisko</label>
+  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+
+  <label for="wojewodztwo">Województwo</label>
+  <select id="wojewodztwo" required>
+    <option value="">— wybierz województwo —</option>
+  </select>
+
+  <label for="miasto">Miasto</label>
+  <select id="miasto" required disabled>
+    <option value="">— wybierz miasto —</option>
+  </select>
+
+<label>Nr upr. EKSPLOATACJA</label>
+<textarea id="nrE"></textarea>
+
+<label id="nrEValidLabel" style="display:none;">
+  Data ważności – EKSPLOATACJA
+</label>
+<input type="date" id="nrEValidTo" style="display:none;">
+
+
+<label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
+<textarea id="nrEPomiary"></textarea>
+
+<label id="nrEPomiaryValidLabel" style="display:none;">
+  Data ważności – EKSPLOATACJA Z POMIARAMI
+</label>
+<input type="date" id="nrEPomiaryValidTo" style="display:none;">
+
+
+<label>Nr upr. DOZÓR</label>
+<textarea id="nrD"></textarea>
+
+<label id="nrDValidLabel" style="display:none;">
+  Data ważności – DOZÓR
+</label>
+<input type="date" id="nrDValidTo" style="display:none;">
+
+
+  <label>Email</label>
+  <input id="email" readonly>
+
+  <label>Telefon</label>
+  <input id="telefon" type="tel">
+
+  <label>Zajmuje się</label>
+  <textarea id="zajmujeSie"></textarea>
+
+  <label>Załącz skan uprawnień</label>
+  <input type="file" id="plik" multiple>
+
+  <label class="rodo-label">
+    <input type="checkbox" id="rodo" required>
+    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+  </label>
+
+  <button type="submit" id="submit-btn">Zarejestruj</button>
+
+  <div id="loading">Zapisywanie danych...</div>
+  <div id="result"></div>
 </form>
-
-<p id="loading"></p>
-<p id="result"></p>
+</div>
 
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
@@ -31,79 +194,248 @@ const supabase = createClient(
 )
 
 let currentUser = null
+const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
+
+function bindValidity(inputId, labelId, dateId) {
+  const input = document.getElementById(inputId)
+  const label = document.getElementById(labelId)
+  const date = document.getElementById(dateId)
+
+  date.min = new Date().toISOString().split('T')[0]
+
+  input.addEventListener('input', () => {
+    if (input.value.trim() !== '') {
+      label.style.display = 'block'
+      date.style.display = 'block'
+      date.required = true
+    } else {
+      label.style.display = 'none'
+      date.style.display = 'none'
+      date.required = false
+      date.value = ''
+    }
+  })
+}
+bindValidity('nrE', 'nrEValidLabel', 'nrEValidTo')
+bindValidity('nrEPomiary', 'nrEPomiaryValidLabel', 'nrEPomiaryValidTo')
+bindValidity('nrD', 'nrDValidLabel', 'nrDValidTo')
+
+async function loadWojewodztwa(selectedWoj = null) {
+  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
+  if (error) return
+  const wojSelect = document.getElementById('wojewodztwo')
+  wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
+  data.forEach(w => {
+    const o = document.createElement('option')
+    o.value = w.id
+    o.textContent = w.nazwa
+    wojSelect.appendChild(o)
+  })
+  if (selectedWoj) {
+    wojSelect.value = selectedWoj
+    wojSelect.dispatchEvent(new Event('change'))
+  }
+}
+
+document.getElementById('wojewodztwo').addEventListener('change', async function() {
+  const wojId = this.value
+  const miastoSelect = document.getElementById('miasto')
+  if (!wojId) {
+    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+    miastoSelect.disabled = true
+    return
+  }
+  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
+  if (error) return
+  miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
+  data.forEach(m => {
+    const o = document.createElement('option')
+    o.value = m.id
+    o.textContent = m.nazwa
+    miastoSelect.appendChild(o)
+  })
+  miastoSelect.disabled = false
+})
+
+document.getElementById('close-btn').addEventListener('click', () => {
+  window.location.href = 'https://orep.pl/'
+})
 
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
-  if (!user) {
-    alert('Brak logowania')
-    return
-  }
+  if (!user) return window.location.href = '/logowanie'
+
   currentUser = user
-  document.getElementById('email').value = user.email
+  email.value = user.email
+
+  const { data } = await supabase.from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
+
+  if (data) {
+    document.getElementById('form-title').textContent = 'Aktualizacja danych'
+    document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
+    fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
+    if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
+    if (data.miasto) document.getElementById('miasto').value = data.miasto
+
+    // daty ważności
+    if (data.nrE) {
+      nrEValidLabel.style.display = 'block'
+      nrEValidTo.style.display = 'block'
+      nrEValidTo.value = data.nrE_valid_to || ''
+    }
+    if (data.nrEPomiary) {
+      nrEPomiaryValidLabel.style.display = 'block'
+      nrEPomiaryValidTo.style.display = 'block'
+      nrEPomiaryValidTo.value = data.nrEPomiary_valid_to || ''
+    }
+    if (data.nrD) {
+      nrDValidLabel.style.display = 'block'
+      nrDValidTo.style.display = 'block'
+      nrDValidTo.value = data.nrD_valid_to || ''
+    }
+
+  } else {
+    loadWojewodztwa()
+  }
 })
 
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-
-  loading.textContent = 'Zapisywanie...'
-  result.textContent = ''
-
-  /* 1️⃣ sprawdzenie rekordu */
-  const { data: existing } = await supabase
-    .from('tabela_elektrykow')
-    .select('id')
-    .eq('email', currentUser.email)
-    .maybeSingle()
-
-  /* 2️⃣ ID rekordu */
-  const recordId = existing?.id ?? crypto.randomUUID()
-
-  /* 3️⃣ upload plików */
-  let urls = []
-
-  for (const file of plik.files) {
-    const ext = file.name.split('.').pop()
-    const shortId = recordId.slice(0, 8)
-    const path = `${shortId}/${Date.now()}.${ext}`
-
-    const { error } = await supabase
-      .storage.from('uprawnienia')
-      .upload(path, file, { upsert: true })
-
-    if (error) {
-      result.textContent = error.message
-      loading.textContent = ''
-      return
-    }
-
-    const { data } = await supabase
-      .storage.from('uprawnienia')
-      .createSignedUrl(path, 3600)
-
-    urls.push(data.signedUrl)
-  }
-
-  /* 4️⃣ zapis do bazy */
-  const payload = {
-    id: recordId,
-    email: currentUser.email,
-    plik: urls.join(',')
-  }
-
-  const { error: dbError } = existing
-    ? await supabase.from('tabela_elektrykow').update(payload).eq('id', recordId)
-    : await supabase.from('tabela_elektrykow').insert(payload)
-
-  loading.textContent = ''
-
-  if (dbError) {
-    result.textContent = dbError.message
+  if (!currentUser) {
+    result.textContent = 'Musisz być zalogowany'
+    result.className = 'error'
     return
   }
 
-  result.textContent = 'Zapisano poprawnie'
-})
-</script>
+  loading.style.display = 'block'
+  result.textContent = ''
+  result.className = ''
 
+  if (nrE.value && nrEPomiary.value) {
+    loading.style.display='none'
+    result.textContent='Wybierz tylko jeden rodzaj eksploatacji'
+    result.className='error'
+    return
+  }
+
+  if (nrD.value && !nrEPomiary.value) {
+    loading.style.display='none'
+    result.textContent='Do DOZORU wymagane są pomiary'
+    result.className='error'
+    return
+  }
+
+  const allowedTypes = ['application/pdf','image/jpeg','image/png']
+  const maxSize = 5*1024*1024
+
+  let plikUrls=[]
+  for (let i=0;i<plik.files.length;i++) {
+    const file = plik.files[i]
+    if (!allowedTypes.includes(file.type) || file.size>maxSize) {
+      loading.style.display='none'
+      result.textContent='Plik nie może przekraczać 5MB. Obsługiwane pliki to: PDF, JPG/JPEG i PNG'
+      result.className='error'
+      return
+    }
+    const path = `${currentUser.id}/${Date.now()}_${file.name}`
+    const { error } = await supabase.storage.from('uprawnienia').upload(path,file,{upsert:true})
+    if (error) {
+      loading.style.display='none'
+      result.textContent=error.message
+      result.className='error'
+      return
+    }
+    const { data } = await supabase.storage.from('uprawnienia').createSignedUrl(path,3600)
+    plikUrls.push(data.signedUrl)
+  }
+
+  const payload = { email: currentUser.email }
+  payload.nre_valid_to = nrEValidTo.value || null
+  payload.nrepomiary_valid_to = nrEPomiaryValidTo.value || null
+  payload.nrd_valid_to = nrDValidTo.value || null
+  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik = plikUrls.join(',')
+
+  const { data: existing } = await supabase.from('tabela_elektrykow').select('id').eq('email',currentUser.email).single()
+  let error
+  if (existing) {
+    const { error: e2 } = await supabase.from('tabela_elektrykow').update(payload).eq('id', existing.id)
+    error = e2
+  } else {
+    const { error: e3 } = await supabase.from('tabela_elektrykow').insert(payload)
+    error = e3
+  }
+
+  loading.style.display='none'
+  if (error) {
+    result.textContent = error.message
+    result.className = 'error'
+    return
+  }
+
+  try {
+    const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+      },
+      body: JSON.stringify({
+        email: currentUser.email,
+        name: document.getElementById('imie').value,
+        nazwisko: document.getElementById('nazwisko').value,
+        telefon: document.getElementById('telefon').value,
+        email: document.getElementById('email').value,
+        nrE: document.getElementById('nrE').value,
+        nrEPomiary: document.getElementById('nrEPomiary').value,
+        nrD: document.getElementById('nrD').value
+      })
+    })
+    if (!res.ok) {
+      const err = await res.text()
+      throw new Error(err || 'Błąd wysyłki emaila')
+    }
+  } catch(err) {
+    result.textContent = 'Nie udało się wysłać emaila powitalnego: ' + err.message
+    result.className = 'error'
+    return
+  }
+
+  window.location.href = 'https://orep.pl/logowanie'
+})
+
+/* === BLOKADA EMAILA I TELEFONU W INNYCH POLACH === */
+
+const zajmujeSieInput = document.getElementById('zajmujeSie');
+
+zajmujeSieInput.addEventListener('input', () => {
+  let value = zajmujeSieInput.value;
+
+  // Ograniczenie do maksymalnie 2 cyfr
+  let digitsCount = 0;
+  value = value.replace(/\d/g, (d) => {
+    digitsCount++;
+    if (digitsCount > 2) {
+      alert('W tym polu nie można wpisać więcej niż 2 cyfr.');
+      return ''; // trzecia i kolejne cyfry są blokowane
+    }
+    return d; // pierwsze 2 cyfry zostają
+  });
+
+  // Usuwamy adresy e-mail
+  const emailRegex = /[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}/gi;
+  value = value.replace(emailRegex, '');
+
+  // Usuwamy numery telefonu
+  const phoneRegex = /\+?\d[\d\s\-]{3,}/g;
+  value = value.replace(phoneRegex, '');
+
+  zajmujeSieInput.value = value;
+});
+
+</script>
 </body>
 </html>
